<?xml version="1.0" encoding="utf-8"?>
<!--
    Next we need to create the resource that defines what types of preference editing widgets our Settings screen should display. Create a settings_main.xml file in the res/xml directory, with the following contents:
    Then we can add a ListPreference to the res/xml/settings_main.xml file.
    The whole XML file should contain the following.
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_min_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_magnitude_label" />

</PreferenceScreen>
